--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -4,6 +4,7 @@
 
 @import './Views/Widgets/PlayerInfo';
 @import './Views/Widgets/Button';
+@import './Views/Widgets/Input';
 
 @import './Views/Pages/Page';
 @import './Views/Pages/Setup';
