--- a/css/app.css
+++ b/css/app.css
@@ -491,15 +491,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .page {
   width: calc(100% - 2rem);
-  max-width: 80rem;
+  max-width: 70rem;
   margin: 3rem auto 0 auto; }
 
 .page--setup__numbers {
   display: flex;
   flex-wrap: wrap; }
-  @media (max-width: 768px) {
-    .page--setup__numbers {
-      flex-direction: column; } }
 
 .page--setup__user-input {
   flex-grow: 1;
@@ -511,10 +508,11 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1rem; }
 
 .page--setup__calculations {
-  padding: 1rem;
-  flex-grow: 1;
-  background-color: lightgrey;
   text-align: right; }
+  .page--setup__calculations__inner {
+    padding: 1rem;
+    margin: 0 auto;
+    background-color: lightgrey; }
   .page--setup__calculations__heading {
     margin-bottom: 1rem; }
   .page--setup__calculations__field {
@@ -525,6 +523,41 @@ h1, h2, h3, h4, h5, h6 {
       white-space: nowrap; }
 
 .page--setup__actions {
+  flex-grow: 1;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.page--level__numbers {
+  display: flex;
+  flex-wrap: wrap; }
+
+.page--level__user-input {
+  flex-grow: 1;
+  flex-shrink: 0;
+  padding: 1rem; }
+  .page--level__user-input__heading {
+    margin-bottom: 1rem; }
+  .page--level__user-input__field {
+    margin-bottom: 1rem; }
+
+.page--level__calculations {
+  text-align: right; }
+  .page--level__calculations__inner {
+    padding: 1rem;
+    margin: 0 auto;
+    background-color: lightgrey; }
+  .page--level__calculations__heading {
+    margin-bottom: 1rem; }
+  .page--level__calculations__field {
+    margin-bottom: 1rem; }
+    .page--level__calculations__field__result {
+      white-space: nowrap; }
+    .page--level__calculations__field__vat {
+      white-space: nowrap; }
+
+.page--level__actions {
   flex-grow: 1;
   padding: 1rem;
   display: flex;
