--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -3,8 +3,11 @@
 @import './Utilities/Typography';
 
 @import './Views/Widgets/PlayerInfo';
+@import './Views/Widgets/DebugMenu';
 @import './Views/Widgets/Button';
 @import './Views/Widgets/Input';
+
+@import './Views/Drawers/Drawer';
 
 @import './Views/Pages/Page';
 @import './Views/Pages/Setup';
