--- a/src/Style/Utilities/Typography.scss
+++ b/src/Style/Utilities/Typography.scss
@@ -1,16 +1,16 @@
 html {
-    font-size: 16px;
+    font-size: 1.2vw;
     
     @media($md) {
-        font-size: 15px;
+        font-size: 1.8vw;
     }
 
     @media($sm) {
-        font-size: 14px;
+        font-size: 2.5vw;
     }
     
     @media($xs) {
-        font-size: 13px;
+        font-size: 3.5vw;
     }
 }
 
