--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -9,6 +9,8 @@
 
 @import './Views/Drawers/Drawer';
 
+@import './Views/Modals/Modal';
+
 @import './Views/Pages/Page';
 @import './Views/Pages/Setup';
 @import './Views/Pages/Level';
