--- a/src/Style/Views/Drawers/Drawer.scss
+++ b/src/Style/Views/Drawers/Drawer.scss
@@ -34,6 +34,21 @@
             font-weight: bold;
             margin: 0 0.5rem;
         }
+
+        &__notification {
+            background-color: red;
+            color: white;
+            font-weight: bold;
+            line-height: 1rem;
+            width: 1rem;
+            text-align: center;
+            border-radius: 50%;
+            margin: 0.25rem;
+            font-size: 0.8rem;
+            position: absolute;
+            top: -0.5rem;
+            right: -0.5rem;
+        }
     }
 
     &__content {
@@ -50,11 +65,15 @@
         top: 0;
         width: 100%;
         height: 2rem;
-        left: 0;
+        right: 0;
         cursor: pointer;
   
         &:focus {
             outline: none;
+        }
+
+        &:checked {
+            width: 2rem;
         }
     }
    
@@ -63,11 +82,20 @@
         padding: 1rem;
     }
     
-    &__toggle:checked ~ &__preview {
+    &__toggle:checked ~ &__preview * {
         display: none;
     }
-
-    &--financial-record .widget--button {
-        margin-right: 1rem;
+    
+    &__toggle:checked ~ &__preview:after {
+        content: '✖';
+        display: block;
+        line-height: 2rem;
+        height: 2rem;
+        width: 2rem;
+        position: absolute;
+        right: 0;
+        top: 0;
+        text-align: center;
+        pointer-events: none;
     }
 }
