--- a/prototypes/charts/style.css
+++ b/prototypes/charts/style.css
@@ -1,3 +1,8 @@
 svg {
     height: 200px; // the contents will scale to fit because of viewBox
 }
+
+text {
+    fill: black;
+    font-size: 1%;
+}
