--- a/src/Style/Views/Pages/Setup.scss
+++ b/src/Style/Views/Pages/Setup.scss
@@ -1,54 +1,9 @@
 .page--setup {
-    &__numbers {
-        display: flex;
-        flex-wrap: wrap;
+    &__input {
+        margin: 1rem auto;
     }
 
-    &__user-input  {
-        flex-grow: 1;
-        flex-shrink: 0;
-        padding: 1rem;
-
-        &__heading {
-            margin-bottom: 1rem;
-        }
-
-        &__field {
-            margin-bottom: 1rem;
-        }
-    }
-
-    &__calculations {
-        text-align: right;
-            
-        &__inner {
-            padding: 1rem;
-            margin: 0 auto;
-            background-color: lightgrey;
-        }
-
-        &__heading {
-            margin-bottom: 1rem;
-        }
-
-        &__field {
-            margin-bottom: 1rem;
-
-            &__result {
-                white-space: nowrap;
-            }
-            
-            &__vat {
-                white-space: nowrap;
-            }
-        }
-    }
-
-    &__actions {
-        flex-grow: 1;
-        padding: 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    &__pie-chart {
+        margin: 3rem auto 0 auto;
     }
 }
