--- a/src/Style/Views/Widgets/Input.scss
+++ b/src/Style/Views/Widgets/Input.scss
@@ -1,6 +1,6 @@
 .widget--input {
     border: 1px solid grey;
-    line-height: 2rem;
+    line-height: 2;
     padding: 0 0.5rem;
     border-radius: 1rem;
 }
