--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -11,6 +11,8 @@
 @import './Views/Widgets/ProgressBar';
 
 @import './Views/Drawers/Drawer';
+@import './Views/Drawers/Timeline';
+@import './Views/Drawers/Notifications';
 
 @import './Views/Modals/Modal';
 
