--- a/src/Style/Views/Widgets/ProgressBar.scss
+++ b/src/Style/Views/Widgets/ProgressBar.scss
@@ -5,8 +5,21 @@
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.5);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+    &__progress, &__message {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+        width: calc(100% - 2rem);
+        max-width: 30rem;
+    }
+
+    &__progress {
+        height: 2rem;
+        top: calc(50% - 1rem);
+    }
+
+    &__message {
+        top: calc(50% + 1rem);
+    }
 }
