--- a/src/Style/Views/Drawers/Notifications.scss
+++ b/src/Style/Views/Drawers/Notifications.scss
@@ -18,7 +18,7 @@
             top: 0;
             left: 0;
             height: 100%;
-            background-color: grey;
+            background-color: rgba(0, 0, 0, 0.25);
         }
 
         &__title {
@@ -33,6 +33,16 @@
 
         &__message {
             position: relative;
+        }
+
+        &.warning {
+            background-color: yellow;
+            color: black;
+        }
+
+        &.alert {
+            background-color: red;
+            color: white;
         }
     }
 }
